// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page layout widget creation should fail when gridPosition has invalid values 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "row must not be less than 0",
  "name": "UserInputError",
}
`;

exports[`Page layout widget creation should fail when pageLayoutTabId references non-existent tab 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "agent": [],
      "cronTrigger": [],
      "databaseEventTrigger": [],
      "fieldMetadata": [],
      "index": [],
      "objectMetadata": [],
      "pageLayout": [],
      "pageLayoutTab": [],
      "pageLayoutWidget": [
        {
          "errors": [
            {
              "code": "PAGE_LAYOUT_TAB_NOT_FOUND",
              "message": "Page layout tab not found",
              "userFriendlyMessage": "Page layout tab not found",
            },
          ],
          "flatEntityMinimalInformation": {
            "id": Any<String>,
            "pageLayoutTabId": Any<String>,
          },
          "status": "fail",
          "type": "create_page_layout_widget",
        },
      ],
      "role": [],
      "roleTarget": [],
      "routeTrigger": [],
      "rowLevelPermissionPredicate": [],
      "rowLevelPermissionPredicateGroup": [],
      "serverlessFunction": [],
      "view": [],
      "viewField": [],
      "viewFilter": [],
      "viewGroup": [],
    },
    "message": "Validation failed for 0 object(s) and 0 field(s)",
    "summary": {
      "invalidAgent": 0,
      "invalidCronTrigger": 0,
      "invalidDatabaseEventTrigger": 0,
      "invalidFieldMetadata": 0,
      "invalidIndex": 0,
      "invalidObjectMetadata": 0,
      "invalidPageLayout": 0,
      "invalidPageLayoutTab": 0,
      "invalidPageLayoutWidget": 0,
      "invalidRole": 0,
      "invalidRoleTarget": 0,
      "invalidRouteTrigger": 0,
      "invalidRowLevelPermissionPredicate": 0,
      "invalidRowLevelPermissionPredicateGroup": 0,
      "invalidServerlessFunction": 0,
      "invalidView": 0,
      "invalidViewField": 0,
      "invalidViewFilter": 0,
      "invalidViewGroup": 0,
      "totalErrors": 0,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
  },
  "message": "Multiple validation errors occurred while creating page layout widget",
  "name": "GraphQLError",
}
`;

exports[`Page layout widget creation should fail when title is missing 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "http": {
      "status": 400,
    },
    "userFriendlyMessage": "An error occurred.",
  },
  "message": "Field "title" of required type "String!" was not provided.",
  "name": "GraphQLError",
}
`;
